--- a/cmm_ui/package.json
+++ b/cmm_ui/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "axios": "^0.19.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
