--- a/cmm_ui/package.json
+++ b/cmm_ui/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "ruby-script": "^1.0.8",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
